[gd_scene load_steps=22 format=3 uid="uid://b1dcn3nm80sd3"]

[ext_resource type="Script" path="res://scripts/level_2.gd" id="1_i8lpl"]
[ext_resource type="Texture2D" uid="uid://bfxo8djr5ybh6" path="res://texture/A_white_cube.png" id="2_jbrrq"]
[ext_resource type="PackedScene" uid="uid://iog44ou6rn43" path="res://Others/player.tscn" id="3_8stfu"]
[ext_resource type="Texture2D" uid="uid://bt8q38iegkdb1" path="res://texture/pixil-frame-0.png" id="4_7r6ul"]
[ext_resource type="Texture2D" uid="uid://bhxpwi45a4ao8" path="res://texture/flag.png" id="5_wq2il"]
[ext_resource type="Material" uid="uid://p5ibbvxbqjpd" path="res://texture/blurshader.tres" id="7_adhh2"]
[ext_resource type="Shader" path="res://Others/BlurGB.gdshader" id="7_f8qd2"]
[ext_resource type="Theme" uid="uid://khgpj6ruioa0" path="res://texture/Bold_text.tres" id="8_eiv2u"]
[ext_resource type="FontFile" uid="uid://cnjcheyut2dew" path="res://texture/fonts/Handjet-SemiBold.ttf" id="9_m2u4t"]
[ext_resource type="Theme" uid="uid://flijevvthfaj" path="res://texture/text.tres" id="10_35d77"]
[ext_resource type="Texture2D" uid="uid://bo7d3b7hpqtin" path="res://texture/just_a_cube.png" id="11_bjpml"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hatj0"]
size = Vector2(564, 181)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_if44f"]
size = Vector2(82, 77)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w8xft"]
size = Vector2(40, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8xfgi"]
size = Vector2(46, 47)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_r8osx"]
shader = ExtResource("7_f8qd2")
shader_parameter/blur_amount = 3.191
shader_parameter/mix_amount = 0.079
shader_parameter/color_over = null

[sub_resource type="LabelSettings" id="LabelSettings_h5c40"]
font = ExtResource("9_m2u4t")
font_size = 40

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ro4n6"]
shader = ExtResource("7_f8qd2")
shader_parameter/blur_amount = 3.014
shader_parameter/mix_amount = 0.642
shader_parameter/color_over = null

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hvu84"]
shader = ExtResource("7_f8qd2")
shader_parameter/blur_amount = 2.739
shader_parameter/mix_amount = 0.774
shader_parameter/color_over = Color(0.523532, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_sp7w4"]
font = ExtResource("9_m2u4t")
font_size = 40

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vg7ro"]
size = Vector2(3682, 40)

[node name="Level2" type="Node2D"]
script = ExtResource("1_i8lpl")

[node name="sky thing" type="TextureRect" parent="."]
modulate = Color(0, 0.75, 1, 1)
z_index = -10
offset_left = -1527.0
offset_top = -1263.0
offset_right = 2223.0
offset_bottom = 996.0
texture = ExtResource("2_jbrrq")

[node name="player2d" parent="." instance=ExtResource("3_8stfu")]
position = Vector2(1, 24)

[node name="grass" type="Node2D" parent="."]

[node name="grass platform" type="StaticBody2D" parent="grass"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="grass/grass platform"]
position = Vector2(239, 128.5)
shape = SubResource("RectangleShape2D_hatj0")

[node name="TextureRect" type="TextureRect" parent="grass/grass platform"]
texture_filter = 1
texture_repeat = 2
offset_left = -44.0
offset_top = 36.0
offset_right = 521.0
offset_bottom = 134.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("4_7r6ul")
expand_mode = 1
stretch_mode = 1

[node name="TextureRect" type="TextureRect" parent="grass/grass platform/TextureRect"]
z_index = -1
texture_filter = 1
texture_repeat = 2
layout_mode = 0
offset_top = 85.0
offset_right = 565.0
offset_bottom = 183.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("4_7r6ul")
expand_mode = 1
stretch_mode = 1

[node name="grass platform2" type="StaticBody2D" parent="grass"]
position = Vector2(612, -68)

[node name="CollisionShape2D" type="CollisionShape2D" parent="grass/grass platform2"]
position = Vector2(-3, 74.5)
shape = SubResource("RectangleShape2D_if44f")

[node name="TextureRect" type="TextureRect" parent="grass/grass platform2"]
texture_filter = 1
texture_repeat = 2
offset_left = -44.0
offset_top = 36.0
offset_right = 38.0
offset_bottom = 113.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("4_7r6ul")
expand_mode = 1
stretch_mode = 1

[node name="grass platform3" type="StaticBody2D" parent="grass"]
position = Vector2(432, -140)

[node name="CollisionShape2D" type="CollisionShape2D" parent="grass/grass platform3"]
position = Vector2(-3, 74.5)
shape = SubResource("RectangleShape2D_if44f")

[node name="TextureRect" type="TextureRect" parent="grass/grass platform3"]
texture_filter = 1
texture_repeat = 2
offset_left = -44.0
offset_top = 36.0
offset_right = 38.0
offset_bottom = 113.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("4_7r6ul")
expand_mode = 1
stretch_mode = 1

[node name="grass platform4" type="StaticBody2D" parent="grass"]
position = Vector2(292, -190)

[node name="CollisionShape2D" type="CollisionShape2D" parent="grass/grass platform4"]
position = Vector2(-3, 74.5)
shape = SubResource("RectangleShape2D_if44f")

[node name="TextureRect" type="TextureRect" parent="grass/grass platform4"]
texture_filter = 1
texture_repeat = 2
offset_left = -44.0
offset_top = 36.0
offset_right = 38.0
offset_bottom = 113.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("4_7r6ul")
expand_mode = 1
stretch_mode = 1

[node name="grass platform5" type="StaticBody2D" parent="grass"]
position = Vector2(156, -234)

[node name="CollisionShape2D" type="CollisionShape2D" parent="grass/grass platform5"]
position = Vector2(-3, 74.5)
shape = SubResource("RectangleShape2D_if44f")

[node name="TextureRect" type="TextureRect" parent="grass/grass platform5"]
texture_filter = 1
texture_repeat = 2
offset_left = -44.0
offset_top = 36.0
offset_right = 38.0
offset_bottom = 113.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("4_7r6ul")
expand_mode = 1
stretch_mode = 1

[node name="grass platform6" type="StaticBody2D" parent="grass"]
position = Vector2(-88, -159)

[node name="CollisionShape2D" type="CollisionShape2D" parent="grass/grass platform6"]
position = Vector2(-3, 74.5)
shape = SubResource("RectangleShape2D_if44f")

[node name="TextureRect" type="TextureRect" parent="grass/grass platform6"]
texture_filter = 1
texture_repeat = 2
offset_left = -44.0
offset_top = 36.0
offset_right = 38.0
offset_bottom = 113.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("4_7r6ul")
expand_mode = 1
stretch_mode = 1

[node name="ending" type="StaticBody2D" parent="."]
position = Vector2(-246, -63)

[node name="TextureRect" type="TextureRect" parent="ending"]
texture_filter = 1
texture_repeat = 2
offset_left = -22.0
offset_top = -19.0
offset_right = 18.0
offset_bottom = 21.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("5_wq2il")
expand_mode = 1
stretch_mode = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="ending"]
position = Vector2(-2, 1)
shape = SubResource("RectangleShape2D_w8xft")

[node name="Area2D" type="Area2D" parent="ending"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ending/Area2D"]
position = Vector2(-2, 1.5)
shape = SubResource("RectangleShape2D_8xfgi")

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(0, -50)
zoom = Vector2(2, 2)
position_smoothing_enabled = true

[node name="textbox" type="CanvasLayer" parent="."]

[node name="level_done" type="Control" parent="textbox"]
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect2" type="ColorRect" parent="textbox/level_done"]
material = SubResource("ShaderMaterial_r8osx")
layout_mode = 0
offset_left = -663.0
offset_top = -389.0
offset_right = 792.0
offset_bottom = 417.0

[node name="ColorRect" type="ColorRect" parent="textbox/level_done"]
material = ExtResource("7_adhh2")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -114.0
offset_top = -73.0
offset_right = 118.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="textbox/level_done"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -42.0
offset_top = -64.0
offset_right = 48.0
offset_bottom = -41.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("8_eiv2u")
text = "Level Done!"
horizontal_alignment = 1

[node name="Button" type="Button" parent="textbox/level_done"]
texture_filter = 1
layout_mode = 0
offset_left = -2.0
offset_top = 54.0
offset_right = 43.0
offset_bottom = 85.0
theme = ExtResource("10_35d77")
text = "Next"

[node name="pause_menu" type="Control" parent="textbox"]
visible = false
z_index = 1
z_as_relative = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -52.5
offset_top = -32.0
offset_right = 52.5
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="textbox/pause_menu"]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = -1.318
anchor_right = 0.5
anchor_bottom = -1.318
offset_left = -77.0
offset_top = -31.648
offset_right = 77.0
offset_bottom = 14.352
grow_horizontal = 2
grow_vertical = 2
text = "Paused"
label_settings = SubResource("LabelSettings_h5c40")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="textbox/pause_menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -33.0
offset_right = 48.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="textbox/pause_menu/MarginContainer"]
layout_mode = 2

[node name="exit" type="Button" parent="textbox/pause_menu/MarginContainer/VBoxContainer"]
z_index = 10
layout_mode = 2
theme = ExtResource("10_35d77")
text = "Main Menu"

[node name="resume" type="Button" parent="textbox/pause_menu/MarginContainer/VBoxContainer"]
z_index = 10
layout_mode = 2
theme = ExtResource("10_35d77")
text = "CONTINE"

[node name="bg" type="TextureRect" parent="textbox/pause_menu"]
z_index = -1
material = ExtResource("7_adhh2")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -671.5
offset_top = -378.0
offset_right = 671.5
offset_bottom = 454.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("11_bjpml")

[node name="bg2" type="TextureRect" parent="textbox/pause_menu"]
z_index = -1
material = SubResource("ShaderMaterial_ro4n6")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -96.5
offset_top = -405.0
offset_right = 97.5
offset_bottom = 440.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("11_bjpml")

[node name="death_screen" type="Control" parent="textbox"]
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="textbox/death_screen"]
material = SubResource("ShaderMaterial_hvu84")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -624.5
offset_top = -360.5
offset_right = 624.5
offset_bottom = 360.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_jbrrq")

[node name="BoxContainer" type="BoxContainer" parent="textbox/death_screen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -103.5
offset_top = -42.5
offset_right = 103.5
offset_bottom = 42.5
grow_horizontal = 2
grow_vertical = 2
vertical = true

[node name="Label" type="Label" parent="textbox/death_screen/BoxContainer"]
texture_filter = 1
layout_mode = 2
text = "You Might have Died!"
label_settings = SubResource("LabelSettings_sp7w4")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="textbox/death_screen/BoxContainer"]
layout_mode = 2
text = "Maybe Jump?"
horizontal_alignment = 1

[node name="respawn_button" type="Button" parent="textbox/death_screen/BoxContainer"]
layout_mode = 2
text = "Respawn"

[node name="death_trigger" type="Area2D" parent="."]
position = Vector2(491, 795)

[node name="CollisionShape2D" type="CollisionShape2D" parent="death_trigger"]
position = Vector2(139, -10)
shape = SubResource("RectangleShape2D_vg7ro")

[connection signal="body_shape_entered" from="ending/Area2D" to="." method="_on_area_2d_body_shape_entered"]
[connection signal="pressed" from="textbox/level_done/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="textbox/pause_menu/MarginContainer/VBoxContainer/exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="textbox/pause_menu/MarginContainer/VBoxContainer/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="textbox/death_screen/BoxContainer/respawn_button" to="." method="_on_respawn_button_pressed"]
[connection signal="body_shape_entered" from="death_trigger" to="." method="_on_death_trigger_body_shape_entered"]
